--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -3,10 +3,10 @@ body {
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
-  height: 75px;
+  height: 60px;
   background-color: #394755;
   display: flex;
   justify-content: center;
